# whale-sentinel-flask-agent

./: README.md  build-and-install.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  ossar.yml
src/whale_sentinel_flask_agent/: __init__.py  whale_sentinel_flask_agent.py  wsagent.py  wslogger.py  wsprotection.py
tests/: redis-set.py  test_ws_flask_agent.py
