[project]
name = "whale-sentinel-flask-agent"
version = "0.1.0"
description = "The Whale Sentinel agent for Flask"
authors = [
    {name = "YangYang-Research"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
