[project]
name = "whale-sentinel-flask-agent"
version = "0.1.1"
description = "The Whale Sentinel agent for Flask"
authors = [
    {name = "YangYang-Research"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "user-agents (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
